# oidc_pages

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  webpack.config.js
.cargo/: audit.toml
.github/workflows/: ci.yml
assets/: style.css
frontend/: App.js  index.html  index.js
frontend/components/: ListItemCard.js
nixos/: module.nix
nixos/tests/: basic.nix  ca.keycloak.local.cert.pem  ca.pages.local.cert.pem  kanidm.nix  keycloak.local.cert.pem  keycloak.local.key.pem  keycloak.nix  pages.local.cert.pem  pages.local.key.pem
nixos/tests/pages/notes/: index.html
nixos/tests/pages/top_secret/: index.html
src/: App.js  config.rs  main.rs  util.rs  views.rs
src/components/: ListItemCard.js
templates/: index.html  logged_out.html
tests/: config.rs
