[package]
name = "oidc_pages"
version = "1.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/oidc_pages"
license = "AGPL-3.0-or-later"
description = "Serve static HTML with OIDC for authorization and authentication"
keywords = ["oidc", "pages"]
categories = ["visualization", "web-programming::http-server", "development-tools"]

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
jsonwebtoken = "9.3.0"
log = "0.4.21"
openidconnect = { version = "4.0.0-alpha.2", default-features = false, features = ["native-tls", "reqwest", "timing-resistant-secret-traits"] }
scraper = "0.20.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
subtle = "2.6.0"
systemd-journal-logger = "2.1.1"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.5.2", default-features = false, features = ["fs"] }
tower-sessions = { version = "0.13.0", default-features = false, features = ["axum-core", "private", "memory-store"] }
url = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
